[package]
name = "qtop-verifier"
version = "0.1.0"
authors = ["Insider77Circle <quantum-proxy@insider77circle.com>"]
edition = "2021"
description = "Quantum topological winding number verifier for traffic obfuscation"
license = "MIT"
repository = "https://github.com/Insider77Circle/quantum-topology-proxy"
homepage = "https://github.com/Insider77Circle/quantum-topology-proxy"
documentation = "https://github.com/Insider77Circle/quantum-topology-proxy/wiki"
keywords = ["quantum", "topology", "privacy", "tor", "verification"]
categories = ["cryptography", "network-programming", "security"]

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Logging and monitoring
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
log = "0.4"
env_logger = "0.10"

# CLI parsing
clap = { version = "4.4", features = ["derive", "env"] }

# Math and numerics
num-complex = "0.4"
num-traits = "0.2"
nalgebra = "0.32"
statrs = "0.16"

# Cryptography
sha3 = "0.10"
blake3 = "1.5"
rand = "0.8"
rand_chacha = "0.3"

# Networking
hyper = { version = "0.14", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tonic = "0.10"
prost = "0.12"

# Prometheus metrics
prometheus = "0.13"
prometheus-hyper = "0.1"

# Configuration
config = "0.13"
dotenv = "0.15"

# Time handling
chrono = { version = "0.4", features = ["serde"] }
humantime = "2.1"

# Data structures
dashmap = "5.5"
crossbeam = "0.8"
parking_lot = "0.12"

# Memory management
jemallocator = { version = "0.5", optional = true }
mimalloc = { version = "0.1", optional = true }

# Testing
proptest = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }
mockall = "0.12"
tempfile = "3.8"

# Benchmarking
iai = "0.1"
divan = "0.1"

# FFI for C interop
libc = "0.2"
cbindgen = "0.26"

# Python interop (optional)
pyo3 = { version = "0.20", optional = true, features = ["extension-module"] }

# Quantum simulation (for testing)
quanta = "0.12"
quantum-simulator = { version = "0.1", optional = true }

[features]
default = ["jemalloc", "python"]
jemalloc = ["dep:jemallocator"]
mimalloc = ["dep:mimalloc"]
python = ["dep:pyo3"]
quantum-sim = ["dep:quantum-simulator"]
full = ["jemalloc", "python", "quantum-sim"]

[[bin]]
name = "qtop-verifier"
path = "src/main.rs"

[[bin]]
name = "qtop-benchmark"
path = "src/benchmark.rs"

[[bin]]
name = "qtop-test"
path = "src/test_runner.rs"

[lib]
name = "qtop_verifier"
crate-type = ["cdylib", "rlib"]

[[test]]
name = "winding_tests"
path = "tests/winding_tests.rs"

[[test]]
name = "security_tests"
path = "tests/security_tests.rs"

[[test]]
name = "integration_tests"
path = "tests/integration_tests.rs"

[[bench]]
name = "winding_benchmark"
harness = false

[[bench]]
name = "crypto_benchmark"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = false

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true

[profile.bench]
opt-level = 3
debug = false
lto = "thin"

[profile.test]
opt-level = 2
debug = true
overflow-checks = true

[build-dependencies]
cbindgen = "0.26"

[dev-dependencies]
proptest = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }
mockall = "0.12"
tempfile = "3.8"
iai = "0.1"
divan = "0.1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
nix = "0.27"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "winsock2"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.cargo-udeps.ignore]
development = ["proptest", "criterion", "mockall"]
