[package]
name = "qtop-verifier"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dashmap = "5.5"
prometheus = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.4", features = ["derive"] }
num-complex = "0.4"
chrono = { version = "0.4", features = ["serde"] }

[[bin]]
name = "qtop-verifier"
path = "src/main.rs"

[lib]
name = "qtop_verifier"
crate-type = ["cdylib", "rlib"]
